--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
@@ -32,6 +33,7 @@ section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
+
 
 .header {
     position: fixed;
@@ -233,22 +235,22 @@ span {
     margin: 1rem 0 3rem;
 }
 
-.portfolio {
+.projects {
     background: var(--second-bg-color);
 }
 
-.portfolio h2 {
+.projects h2 {
     margin-bottom: 4rem;
 }
 
-.portfolio-container {
+.projects-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
 
-.portfolio-container .portfolio-box {
+.projects-container .projects-box {
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
@@ -256,16 +258,16 @@ span {
     display: flex;
 }
 
-.portfolio-box img {
+.projects-box img {
     width: 100%;
     transition: 0.5s ease;
 }
 
-.portfolio-box:hover img {
+.projects-box:hover img {
     transform: scale(1.1);
 }
 
-.portfolio-box .portfolio-layer {
+.projects-box .projects-layer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -282,20 +284,20 @@ span {
     transition: 0.5s ease;
 }
 
-.portfolio-box:hover .portfolio-layer {
+.projects-box:hover .projects-layer {
     transform: translateY(0);
 }
 
-.portfolio-layer h4 {
+.projects-layer h4 {
     font-size: 3rem;
 }
 
-.portfolio-layer p {
+.projects-layer p {
     font-size: 1.6rem;
     margin: 0.3rem 0 1rem;
 }
 
-.portfolio-layer a {
+.projects-layer a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -305,7 +307,7 @@ span {
     border-radius: 50%;
 }
 
-.portfolio-layer a i {
+.projects-layer a i {
     font-size: 2rem;
     color: var(--second-bg-color);
 }
@@ -404,7 +406,7 @@ span {
         padding-bottom: 7rem;
     }
 
-    .portfolio {
+    .projects {
         padding-bottom: 7rem;
     }
 
@@ -470,17 +472,17 @@ span {
         margin-bottom: 3rem;
     }
 
-    .portfolio h2 {
+    .projects h2 {
         margin-bottom: 3rem;
     }
 
-    .portfolio-container {
+    .projects-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 617px) {
-    .portfolio-container {
+    .projects-container {
         grid-template-columns: 1fr;
     }
 }
